# mr-milchick

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  mr-milchick.github.toml  mr-milchick.toml  smoke-test.md
.github/: pull_request_template.md
.github/workflows/: release.yml  review.yml  test.yml
.gitlab/merge_request_templates/: Default.md
apps/mr-milchick/: Cargo.toml
apps/mr-milchick/src/: app.rs  cli.rs  error.rs  lib.rs  main.rs
apps/mr-milchick/src/config/: env.rs  loader.rs  mod.rs  model.rs  resolver.rs  schema.rs
apps/mr-milchick/src/connectors/: mod.rs
apps/mr-milchick/src/connectors/github/: api.rs  client.rs  dto.rs  mod.rs
apps/mr-milchick/src/connectors/gitlab/: api.rs  client.rs  dto.rs  mod.rs
apps/mr-milchick/src/connectors/notifications/: mod.rs  slack_app.rs  slack_workflow.rs
apps/mr-milchick/src/context/: builder.rs  mod.rs  model.rs  raw.rs
apps/mr-milchick/src/core/: message_templates.rs  mod.rs  model.rs
apps/mr-milchick/src/core/actions/: model.rs  planner.rs
apps/mr-milchick/src/core/comment/: metadata.rs  render.rs
apps/mr-milchick/src/core/context/: model.rs
apps/mr-milchick/src/core/domain/: area_summary.rs  path_classifier.rs  reviewer_routing.rs  snapshot_analysis.rs
apps/mr-milchick/src/core/domain/codeowners/: context.rs  matcher.rs  mod.rs  parser.rs  planner.rs
apps/mr-milchick/src/core/inference/: mod.rs
apps/mr-milchick/src/core/rules/: branch_policy.rs  engine.rs  model.rs
apps/mr-milchick/src/core/tone/: registry.rs  selector.rs
apps/mr-milchick/src/fixture/: mod.rs
apps/mr-milchick/src/runtime/: executor.rs  mod.rs  runtime.rs
apps/mr-milchick/tests/: cli_integration.rs
crates/milchick-connectors/: Cargo.toml
crates/milchick-connectors/src/gitlab/: api.rs  client.rs  mod.rs
crates/milchick-connectors/src/notifications/: slack_app.rs  slack_workflow.rs
crates/milchick-connectors/tests/: gitlab_connector.rs  slack_sink.rs  slack_workflow_sink.rs
crates/milchick-connectors/tests/support/: mock_server.rs
crates/milchick-core/: Cargo.toml
crates/milchick-core/src/: lib.rs  model.rs
crates/milchick-core/src/actions/: model.rs  planner.rs
crates/milchick-core/src/comment/: render.rs
crates/milchick-core/src/context/: model.rs
crates/milchick-core/src/domain/: code_area.rs  path_classifier.rs  reviewer_routing.rs  snapshot_analysis.rs
crates/milchick-core/src/domain/codeowners/: matcher.rs  model.rs  parser.rs  planner.rs
crates/milchick-core/src/rules/: engine.rs  mod.rs  model.rs
crates/milchick-runtime/: Cargo.toml
crates/milchick-runtime/src/: executor.rs  lib.rs  runtime.rs
docs/: README.md  architecture.md  build-pipeline-examples.md  ci-quickstart.md  config-reference.md  connector-compilation-guidelines.md  connectors-and-capabilities.md  fixture-testing.md  local-llm.md  local-testing.md  message-templates.md  reviewer-routing.md  tone-and-messages.md
fixtures/: blocking-refine.toml  first-notification.toml  no-findings-update.toml  review-request.toml  threaded-first-notification.toml  threaded-update-notification.toml  update-notification.toml
scripts/: benchmark_llm_smoke.sh  build_linux_release.sh
src/: app.rs  cli.rs  error.rs  main.rs
src/actions/: executor.rs  mod.rs  model.rs  planner.rs  runtime.rs
src/actions/executor/: gitlab.rs
src/app/: mode.rs
src/comment/: render.rs
src/config/: loader.rs  model.rs
src/context/: builder.rs  env.rs  mod.rs  model.rs  raw.rs
src/domain/: area_summary.rs  code_area.rs  mod.rs  path_classifier.rs  reviewer_routing.rs  snapshot_analysis.rs
src/domain/codeowners/: context.rs  matcher.rs  mod.rs  model.rs  parser.rs  planner.rs
src/gitlab/: api.rs  client.rs  dto.rs  mod.rs
src/notifications/: slack.rs
src/rules/: branch_policy.rs  engine.rs  mod.rs  model.rs
src/tone/: category.rs  config.rs  mod.rs  registry.rs  selector.rs
tests/: cli_integration.rs  github_connector.rs  gitlab_connector.rs  llm_local_smoke.rs  slack_sink.rs  slack_workflow_sink.rs
tests/support/: mock_server.rs
