[workspace]
members = [
    "apps/mr-milchick",
    "crates/milchick-core",
    "crates/milchick-runtime",
    "crates/milchick-connectors",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1.89"
clap = { version = "4", features = ["derive"] }
futures = "0.3.32"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
