[package]
name = "mr-milchick"
version = "3.0.0"
edition = "2024"
license = "MIT"
description = "CLI for merge request governance in GitLab CI pipelines"
repository = "https://github.com/ArthurianX/mr-milchick"
homepage = "https://github.com/ArthurianX/mr-milchick"
documentation = "https://docs.rs/mr-milchick"
rust-version = "1.85"
readme = "README.md"
keywords = ["gitlab", "cli", "review", "ci", "governance"]
categories = ["command-line-utilities", "development-tools"]
build = "apps/mr-milchick/build.rs"

[lib]
path = "apps/mr-milchick/src/lib.rs"

[[bin]]
name = "mr-milchick"
path = "apps/mr-milchick/src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1.89"
clap = { version = "4", features = ["derive"] }
futures = "0.3.32"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
llama-cpp-2 = { version = "=0.1.141", features = ["sampler"], optional = true }

[features]
default = ["github"]
gitlab = []
github = []
slack-app = []
slack-workflow = []
teams = []
discord = []
llm-local = ["dep:llama-cpp-2"]
