[package]
name = "mr-milchick"
version = "1.0.1"
edition.workspace = true

[features]
default = ["gitlab", "slack-app", "slack-workflow"]
gitlab = ["milchick-connectors/gitlab"]
github = ["milchick-connectors/github"]
slack-app = ["milchick-connectors/slack-app"]
slack-workflow = ["milchick-connectors/slack-workflow"]
teams = ["milchick-connectors/teams"]
discord = ["milchick-connectors/discord"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
milchick-core = { path = "../../crates/milchick-core" }
milchick-runtime = { path = "../../crates/milchick-runtime" }
milchick-connectors = { path = "../../crates/milchick-connectors", default-features = false }

[build-dependencies]
