[package]
name = "milchick-connectors"
version = "0.1.0"
edition.workspace = true

[features]
default = ["gitlab", "slack-app", "slack-workflow"]
gitlab = []
github = []
slack-app = []
slack-workflow = []
teams = []
discord = []

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
milchick-core = { path = "../milchick-core" }
milchick-runtime = { path = "../milchick-runtime" }

[dev-dependencies]
tokio.workspace = true
